--- a/Day _02/Day_04/Day_06/indexx.html
+++ b/Day _02/Day_04/Day_06/indexx.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-        <script src ="constcsk.js"></script>
-
+  <script src="task4.js"></script>  
 </body>
 </html>
