--- a/Day _02/Day_04/Day_07/Day_08/index.html
+++ b/Day _02/Day_04/Day_07/Day_08/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script img="function.js"></script>
+    <script imgsrc="functiontasks.js"></script>
 </body>
 </html>
