--- a/Day_017/color.html
+++ b/Day_017/color.html
@@ -40,9 +40,12 @@
       }
 
       // Task 1.2 - pause()
+      let  clearInterval;
       function pause(){
         console.log("clicked...");
         let colorIndex = 0;
+        clearInterval(sk 1.3 - stop()
+      function  stop()colorInterval);
          setInterval(() => {
            console.log(colorIndex);
            document.body.style.background = colors[colorIndex % colors.length];
@@ -50,14 +53,15 @@
         }, 1000 * 2);
       }
 
-      // Task 1.3 - stop()
+      // Ta{
 
-      //   let colorIndex = 0;
-      //   setInterval(() => {
-      //     console.log(colorIndex);
-      //     document.body.style.background = colors[colorIndex % colors.length];
-      //     colorIndex++;
-      //   }, 1000 * 2);
+           let colorIndex = 0;
+           setInterval(() => {
+           console.log(colorIndex);
+           document.body.style.background = colors[colorIndex % colors.length];
+           colorIndex++;
+        }, 1000 * 2);
+      }
     </script>
   </body>
 </html>
