--- a/Day_017/index2.html
+++ b/Day_017/index2.html
@@ -37,12 +37,12 @@
 
       // Task 1.3 - stop()
 
-      //   let colorIndex = 0;
-      //   setInterval(() => {
-      //     console.log(colorIndex);
-      //     document.body.style.background = colors[colorIndex % colors.length];
-      //     colorIndex++;
-      //   }, 1000 * 2);
+         let colorIndex = 0;
+         setInterval(() => {
+           console.log(colorIndex);
+           document.body.style.background = colors[colorIndex % colors.length];
+           colorIndex++;
+         }, 1000 * 2);
     </script>
   </body>
 </html>
